@startuml Diagramme de classes - Vite & Gourmand

title Diagramme de classes - Vite & Gourmand

skinparam classAttributeIconSize 0
hide circle
skinparam linetype ortho

' ===== HIÉRARCHIE UTILISATEURS =====

class Utilisateur {
    - utilisateur_id : int
    - email : string
    - password : string
    - prenom : string
    - nom : string
    - role_id : int
    --
    + getRole() : string
}

class Client {
    --
    + passerCommande() : Commande
    + laisserAvis() : Avis
}

class Employe {
    --
    + traiterCommande() : boolean
}

class Administrateur {
    --
    + gererMenus() : void
}

' ===== CLASSES MÉTIER =====

class Menu {
    - menu_id : int
    - titre : string
    - prix_par_personne : double
    - quantite_restante : int
    --
    + calculerPrixTotal() : double
}

class Commande {
    - numero_commande : string
    - date_prestation : Date
    - nombre_personne : int
    - prix_total : double
    - statut : string
    --
    + calculerPrixTotal() : double
    + changerStatut() : boolean
}

class Avis {
    - avis_id : int
    - note : int
    - description : string
    - statut : string
    --
    + publier() : boolean
}

' ===== RELATIONS =====

' Héritage
Utilisateur <|-- Client
Utilisateur <|-- Employe
Utilisateur <|-- Administrateur

' Relations principales
Client "1" -- "0..*" Commande : passe >
Client "1" -- "0..*" Avis : rédige >
Commande "1" -- "1" Menu : contient >
Commande "1" -- "0..1" Avis : génère >

' Notes
note right of Utilisateur
    Classe parente
    3 types : Client, Employé, Admin
end note

note bottom of Commande
    Statuts : en attente → accepté
    → en préparation → livré → terminée
    
    Calculs : frais livraison + réduction
end note

@enduml
